--- a/platform.html
+++ b/platform.html
@@ -68,7 +68,7 @@
                 <img src="images/Icons/Roblox.png" height="75" width="75" alt="">
                 <h1 class="display-4 font-weight-normal">ROBLOX</h1>
                 <p class="lead font-weight-normal">Not many people would think there are companies as well as individuals that make millions of dollars on the platform.</p>
-                <a class="btn btn-outline-danger" href="www.roblox.com">Check it out</a>
+                <a class="btn btn-outline-danger" href="https://www.roblox.com">Check it out</a>
             </div>
         </div>
     </div>
