--- a/socialmedia.html
+++ b/socialmedia.html
@@ -75,7 +75,7 @@
                             <div>
                                 <span>Check us out for news and updates!</span>
                             </div>
-                            <a href="https://twitter.com/">Go now</a>
+                            <a href="https://twitter.com/" target="_blank">Go now</a>
                         </div>
                     </div>
 
@@ -88,7 +88,7 @@
                             <div>
                                 <span>Check us out for news and updates!</span>
                             </div>
-                            <a href="https://www.facebook.com/">Go now</a>
+                            <a href="https://www.facebook.com/" target="_blank">Go now</a>
                         </div>
                     </div>
 
