--- a/album.html
+++ b/album.html
@@ -69,7 +69,7 @@
                 <div class="card mb-4 box-shadow">
                     <img class="card-img-top" src="images/Thumbnails2/Preview1.jpg" alt="">
                     <div class="card-body">
-                        <p class="card-text">The game</p>
+                        <p class="card-text">First</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -84,7 +84,7 @@
                 <div class="card mb-4 box-shadow">
                     <img class="card-img-top" src="images/Thumbnails2/Preview2.jpg" alt="">
                     <div class="card-body">
-                        <p class="card-text">is great</p>
+                        <p class="card-text">Second</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -99,7 +99,7 @@
                 <div class="card mb-4 box-shadow">
                     <img class="card-img-top" src="images/Thumbnails2/Preview3.jpg" alt="">
                     <div class="card-body">
-                        <p class="card-text">dont</p>
+                        <p class="card-text">Third</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -114,7 +114,7 @@
                 <div class="card mb-4 box-shadow">
                     <img class="card-img-top" src="images/Thumbnails2/Preview4.jpg" alt="">
                     <div class="card-body">
-                        <p class="card-text">question</p>
+                        <p class="card-text">Forth</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
@@ -129,7 +129,7 @@
                 <div class="card mb-4 box-shadow">
                     <img class="card-img-top" src="images/Thumbnails2/Preview5.jpg" alt="">
                     <div class="card-body">
-                        <p class="card-text">it.</p>
+                        <p class="card-text">Sixth</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
