--- a/services.html
+++ b/services.html
@@ -68,18 +68,18 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Advising</h5>
-                        <p class="card-text">After 1000 years of making games, I can help you create the best game ever.</p>
-                        <p class="card-text"><small class="text-muted">Confirmed by Elon Musk</small></p>
-                        <p class="card-text"><small class="text-muted">Confirmed by Donald Trump</small></p>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua..</p>
+                        <p class="card-text"><small class="text-muted">Confirmed by Name</small></p>
+                        <p class="card-text"><small class="text-muted">Confirmed by Name</small></p>
                     </div>
                     <img class="card-img-bottom" src="images/Logos/Banana.png" alt="Card image cap">
                 </div>
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Marketing</h5>
-                        <p class="card-text">I have made 1 billion dollars, you want me as your marketer.</p>
-                        <p class="card-text"><small class="text-muted">Confirmed by Elon Musk</small></p>
-                        <p class="card-text"><small class="text-muted">Confirmed by Donald Trump</small></p>
+                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        <p class="card-text"><small class="text-muted">Confirmed by Name</small></p>
+                        <p class="card-text"><small class="text-muted">Confirmed by Name</small></p>
                     </div>
                     <img class="card-img-bottom" src="images/Logos/Seaborne2.png" alt="Card image cap">
                 </div>
