--- a/services.html
+++ b/services.html
@@ -72,7 +72,7 @@
                         <p class="card-text"><small class="text-muted">Confirmed by Name</small></p>
                         <p class="card-text"><small class="text-muted">Confirmed by Name</small></p>
                     </div>
-                    <img class="card-img-bottom" src="images/Logos/Banana.png" alt="Card image cap">
+                    <img class="card-img-bottom" src="images/Logos/Seaborne.png" alt="Card image cap">
                 </div>
                 <div class="card">
                     <div class="card-body">
